@@ -21,8 +21,9 @@ It is strictly recomended to uninstall all previous versions of any Jumi extensi
 
 Changes:
     - syntax of Jumi content plugin changed to {jumi stored_code_source}code_written{/jumi}
+    - added Filtering option to content plugin by article author user groups. Security precaution.
     - added Jumi editor-xtd (button) plugin that encodes/decodes code_written
-    - Jumi content plugin processes html, php, js, css codes added directly into Joomla! articles by Jumi button
+    - Jumi content plugin processes custom codes added directly into Joomla! articles by Jumi button
     - added Debug mode parameter to Jumi content plugin. If Debug is set to No then no error messages are shown and the relevant Jumi syntax is cleared from the article
 
 ================================
